# config-validator

./: .gitignore  10-ssl.conf  README.md  apache2.conf  security.conf
agent/: CMakeLists.txt  Doxyfile.in  conanfile.txt
agent/docs/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  globals.html  globals_func.html  globals_type.html  index.html  jarvis__the__bee_8cpp.html  jarvis__the__bee_8cpp.js  jarvis__the__bee_8h.html  jarvis__the__bee_8h.js  jarvis__the__bee_8h_source.html  menudata.js  navtreedata.js  navtreeindex0.js  unordered__set__algorithms_8h.html  unordered__set__algorithms_8h.js  unordered__set__algorithms_8h_source.html
agent/docs/html/search/: all_0.js  all_1.js  all_2.js  files_1.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js
agent/docs/latex/: files.tex  jarvis__the__bee_8cpp.tex  jarvis__the__bee_8h.tex  refman.tex  unordered__set__algorithms_8h.tex
agent/src/: a.out  common.h  file_comparison.cpp  file_comparison.h  file_inputer.cpp  file_inputter.cpp  file_inputter.h  jarvis_the_bee.cpp  jarvis_the_bee.h  main.cpp  rest_server.cpp  rest_server.h  test_file.txt  unordered_set_algorithms.h
queen/: requirements.txt
queen/queen_project/: manage.py
queen/queen_project/queen_app/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  views.py
queen/queen_project/queen_project/: celery.py  settings.py  urls.py  wsgi.py
queen/queen_project/staticfiles/css/: custom.css
queen/queen_project/templates/: base.html
queen/queen_project/templates/queen/: add_bee.html  index.html  index_noauth.html  view_bee.html
sec_configs/: apache2.conf  main.cf  nginx.conf  nginx_config  sshd_config
